--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Karen McKinnon</a></strong></h1>
+				<h1><strong><a href="index.html">Jane W. Baldwin</a></strong></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Climate variability, climate change</h2>
-				<p>The McKinnon group<br/>
+				<p>The Baldwin group<br/>
 					Department of Statistics, Institute of the Environment<br/>
 					University of California, Los Angeles</p>
 			</section>
