--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<section id="banner">
 				<h2>Climate variability, climate change</h2>
 				<p>The Baldwin group<br/>
-					Department of Statistics, Institute of the Environment<br/>
-					University of California, Los Angeles</p>
+					Lamont-Doherty Earth Observatory, Columbia University<br/>
+					Palisades, New York</p>
 			</section>
 
 			<!-- Welcome section -->
