--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://scholar.google.com/citations?user=s8FR0I8AAAAJ&hl=en" class="icon fa-google"></a></li>
+						<li><a href="https://scholar.google.com/citations?user=Jtn-XfoAAAAJ&hl=en" class="icon fa-google"></a></li>
 						<li><a href="https://github.com/karenamckinnon" class="icon fa-github"></a></li>
 						<li><a href="https://twitter.com/karalimck" class="icon fa-twitter"></a></li>
 					</ul>
