--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Climate variability, climate change</h2>
-				<p>The Baldwin group<br/>
+				<p>The Baldwin Group<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/>
 					Palisades, New York</p>
 			</section>
@@ -100,11 +100,11 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Jtn-XfoAAAAJ&hl=en" class="icon fa-google"></a></li>
-						<li><a href="https://github.com/karenamckinnon" class="icon fa-github"></a></li>
-						<li><a href="https://twitter.com/karalimck" class="icon fa-twitter"></a></li>
+						<li><a href="https://github.com/janewbaldwin/" class="icon fa-github"></a></li>
+						<li><a href="https://twitter.com/janewbaldwin" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Karen McKinnon, 2020</li>
+						<li>&copy; Jane W. Baldwin, 2020</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
