--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Climate variability, climate change</h2>
+				<h2>Climate Dynamics and Extreme Event Risk</h2>
 				<p>The Baldwin Group<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/>
 					Palisades, New York</p>
