--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Climate Dynamics and Extreme Event Risk</h2>
-				<p>The Baldwin Group<br/>
-					Lamont-Doherty Earth Observatory, Columbia University<br/>
-					Palisades, New York</p>
+				<p>Currently:<br/>
+					Postdoctoral Fellow, Lamont-Doherty Earth Observatory, Columbia University<br/>
+					Starting July 2021:<br/>
+					The Baldwin Group<br/>
+					University of California Irvine, Columbia University<br/>
+					</p>
 			</section>
 
 			<!-- Welcome section -->
