--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		ga('send', 'pageview');
 		</script>
 		<!-- End Google Analytics -->
-		<title>Karen McKinnon</title>
+		<title>Jane W. Baldwin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,7 @@
 				<p>Currently:<br/>
 					Postdoctoral Fellow, Lamont-Doherty Earth Observatory, Columbia University<br/>
 					Starting July 2021:<br/>
-					The Baldwin Group<br/>
+					Assistant Professor of Earth System Science<br/>
 					University of California Irvine, Columbia University<br/>
 					</p>
 			</section>
