--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Climate Dynamics and Extreme Event Risk</h2>
-				<p>Currently:<br/>
-					Postdoctoral Fellow, Lamont-Doherty Earth Observatory, Columbia University<br/>
-					Starting July 2021:<br/>
+				<p>[Currently]<br/>
+					Postdoctoral Fellow<br/>
+					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
+					[Starting July 2021]<br/>
 					Assistant Professor of Earth System Science<br/>
 					University of California Irvine, Columbia University<br/>
 					</p>
