--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="publications.html">Publications</a></li>
 						<li><a href="research_interests.html">Research Interests</a></li>
-						<li><a href="teaching.html">Teaching</a></li>
+						<li><a href="opportunities.html">Opportunities</a></li>
 						<li><a href="group.html">Group</a></li>
 						<li><a href="McKinnon-Karen-CV.pdf">CV</a></li>
 					</ul>
