edited opportunities to see if can commit

--- a/opportunities.html
+++ b/opportunities.html
@@ -51,7 +51,7 @@
 					<!-- Text -->
 						<section>
 
-							<h3>Statistics 235: Modern Environmental Statistics</h3>
+							<h3>This is a test of whether Jane can commit to github!</h3>
 							<p>Winter quarter, 2019</p>
 
 							<p>
