edited Columbia typo on main page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
 					[Starting July 2021]<br/>
 					Assistant Professor of Earth System Science<br/>
-					University of California Irvine, Columbia University<br/>
+					University of California, Irvine<br/>
 					</p>
 			</section>
 
