--- a/group.html
+++ b/group.html
@@ -144,7 +144,7 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=s8FR0I8AAAAJ&hl=en" class="icon fa-google"></a></li>
-						<li><a href="https://github.com/karenamckinnon" class="icon fa-github"></a></li>
+						<li><a href="https://github.com/eldia-Agua-y-la-Atmosfera-2023" class="icon fa-github"></a></li>
 						<li><a href="https://twitter.com/karalimck" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
