--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Jtn-XfoAAAAJ&hl=en" class="icon fa-google"></a></li>
-						<li><a href="https://github.com/janewbaldwin/" class="icon fa-github"></a></li>
+						<li><a href="https://github.com/eldia-Agua-y-la-Atmosfera-2023/" class="icon fa-github"></a></li>
 						<li><a href="https://twitter.com/janewbaldwin" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
