--- a/base_page.html
+++ b/base_page.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PAGE NAME - Jane W. Baldwin</title>
+		<title>PAGE NAME - 2023 El Día del Agua y la Atmósfera</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -394,10 +394,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=s8FR0I8AAAAJ&hl=en" class="icon fa-google"></a></li>
 						<li><a href="https://github.com/eldia-Agua-y-la-Atmosfera-2023" class="icon fa-github"></a></li>
-						<li><a href="https://twitter.com/karalimck" class="icon fa-twitter"></a></li>
+						<li><a href="https://twitter.com/HAS_UArizona" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Karen McKinnon, 2019</li>
+						<li>&copy; Y-H Wang, 2022</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
