--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Climate Dynamics and Extreme Event Risk</h2>
-				<p>[Currently]<br/>
+				<h2>El Día Del Agua Y La Atmósfera</h2>
+				<h2>[In Preparation] 2023</h2>
+				<p> 2023<br/>
 					Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
 					[Starting July 2021]<br/>
