--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		ga('send', 'pageview');
 		</script>
 		<!-- End Google Analytics -->
-		<title>Jane W. Baldwin</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,8 +45,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>El Día Del Agua Y La Atmósfera</h2>
-				<h2>[In Preparation] 2023</h2>
-				<p> 2023<br/>
+				<p> 2023 [In Preparation]</h2>
+				<p> <br/>
 					Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
 					[Starting July 2021]<br/>
