--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>El Día Del Agua Y La Atmósfera</h2><br/>
-				<h2> 2023 [In Preparation]</h2>
+				<h2>El Día Del Agua Y La Atmósfera<br/>
+				      2023 [In Preparation]</h2>
 				<p> <br/>
 					Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
@@ -109,7 +109,7 @@
 						<li><a href="https://twitter.com/janewbaldwin" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; YuanH Wang, 2020</li>
+						<li>&copy; YuanH Wang, 2022</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
