--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Jane W. Baldwin</a></strong></h1>
+				<h1><strong><a href="index.html"></a></strong></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -47,11 +47,11 @@
 				<h2>El Día Del Agua Y La Atmósfera<br/>
 				      2023 [In Preparation]</h2>
 				<p> <br/>
-					Postdoctoral Fellow<br/>
+				<!--	Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
-					[Starting July 2021]<br/>
-					Assistant Professor of Earth System Science<br/>
-					University of California, Irvine<br/>
+					[Starting July 2021]<br/> -->
+					Hydrology ans Atmospheric Science<br/>
+					The University of Arizona, Tucson<br/>
 					</p>
 			</section>
 
@@ -106,11 +106,11 @@
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Jtn-XfoAAAAJ&hl=en" class="icon fa-google"></a></li>
 						<li><a href="https://github.com/eldia-Agua-y-la-Atmosfera-2023/" class="icon fa-github"></a></li>
-						<li><a href="https://twitter.com/janewbaldwin" class="icon fa-twitter"></a></li>
+						<li><a href="https://twitter.com/HAS_UArizona" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; YuanH Wang, 2022</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Contact us: <a has.student.symposium@gmail.com</a></li>
 					</ul>
 				</div>
 			</footer>
