--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; YuanH Wang, 2022</li>
-						<li>Contact us: <a has.student.symposium@gmail.com</a></li>
+						<li>Contact us: <a href="has.student.symposium@gmail.com"></a></li>
 					</ul>
 				</div>
 			</footer>
