--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<!--	Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
 					[Starting July 2021]<br/> -->
-					Hydrology ans Atmospheric Science<br/>
+					Hydrology and Atmospheric Science<br/>
 					The University of Arizona, Tucson<br/>
 					</p>
 			</section>
