--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 						<li><a href="https://twitter.com/HAS_UArizona" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; YuanH Wang, 2022</li>
-						<li>Contact us: <a "has.student.symposium@gmail.com"></a></li> 
+						<li>&copy; YuanH Wang, 2022</li> 
+						<li>Contact us: <a href = "mailto: has.student.symposium@gmail.com">Send Email</a></li> 
 					</ul>
 				</div>
 			</footer>
