--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; YuanH Wang, 2022</li> 
-						<li>Contact us: <a href = "mailto: has.student.symposium@gmail.com">Contact us</a></li> 
+						<li><a href = "mailto: has.student.symposium@gmail.com">Contact us</a></li> 
 					</ul>
 				</div>
 			</footer>
