--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><strong><a href="index.html">Jane W. Baldwin</a></strong></h1>
+				<h1><strong><a href="index.html">2023 EL DÍA</a></strong></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -274,7 +274,7 @@
 						<li><a href="https://twitter.com/karalimck" class="icon fa-twitter"></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Jane W. Baldwin, 2020</li>
+						<li>&copy; Yuan H. Wang, 2022</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
 					</ul>
 				</div>
