--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
 		ga('send', 'pageview');
 		</script>
 		<!-- End Google Analytics -->
-		<title>Publications - Karen McKinnon</title>
+		<title>In Preparation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
