--- a/opportunities.html
+++ b/opportunities.html
@@ -45,7 +45,7 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<h2>Teaching at UCLA</h2>
+						<h2>In Preparation</h2>
 					</header>
 
 					<!-- Text -->
