--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
 		ga('send', 'pageview');
 		</script>
 		<!-- End Google Analytics -->
-		<title>In Preparation</title>
+		<title>Teaching - Karen McKinnon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,7 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<h2>Publications</h2>
+						<h2>In preparation</h2>
 					</header>
 					<hr />
 
