--- a/group.html
+++ b/group.html
@@ -47,7 +47,7 @@
 			<section id="one" class="wrapper style1">
 			<div class="container">
 				<header class="major special">
-					<h2>The McKinnon group</h2>
+					<h2>Invited Speakers (In Preparation)</h2>
 				</header>
 				<div class="feature-grid">
 					<div class="feature">
