--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				<!--	Postdoctoral Fellow<br/>
 					Lamont-Doherty Earth Observatory, Columbia University<br/><br/>
 					[Starting July 2021]<br/> -->
-					Hydrology and Atmospheric Science<br/>
-					The University of Arizona, Tucson<br/>
+					<a href="https://has.arizona.edu/">Hydrology and Atmospheric Science<br/>
+					The University of Arizona, Tucson<br/></a>
 					</p>
 			</section>
 
